Added navbar at the top of the website

--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
     <header id="body-header">
         <nav>
             <div>
+                <ul class="nav-list text-align nav-menu">
+                    <li> <a href="#body-header">Home</a> </li>
+                    <li> <a href="#about">About</a> </li>
+                    <li> <a href="#skills">Skills</a> </li>
+                    <li> <a href="#work-experience">Experience</a> </li>
+                    <li> <a href="#education">Education</a> </li>
+                    <li> <a href="#portfolio">Portfolio</a> </li>
+                    <li> <a href="#contact">Contact</a> </li>
+                </ul>
+            </div>
+            <div>
                 <h1 class="name text-align">Lorem Ipsum</h1>
             </div>
         </nav>
