--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+    <section class="go-to-top">
+        <a href="#body-header"><img src="img/go-to-top.png" alt="go-to-top"></a>
+    </section>
 
     <header id="body-header">
         <nav>
