--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
         <section id="skills" style="padding-bottom: 60px;">
             <h1 class="skills-heading">
+                <span><i class="fas fa-chalkboard-teacher"></i></span>
                 <span>SKILLS</span>
             </h1>
             
@@ -106,6 +107,7 @@
 
         <section id="work-experience" style="padding-bottom: 60px;">
             <h1 class="experience-heading">
+                <span><i class="fas fa-briefcase"></i></span>
                 <span>Work Experience</span>
             </h1>
             <div class="timeline">
@@ -206,6 +208,7 @@
 
         <section id="education" style="padding-bottom: 60px;">
             <h1 class="education-heading">
+                <span><i class="fas fa-university"></i></span>
                 <span>Education</span>
             </h1>
             <div class="timeline">
@@ -305,6 +308,7 @@
 
         <section id="portfolio" style="padding-bottom: 60px;">
             <h1 class="portfolio-heading">
+                <span><i class="fas fa-scroll"></i></span>
                 <span>Portfolio</span>
             </h1>
             <div class="portfolio-container">
